overflow bug fix

--- a/src/style.css
+++ b/src/style.css
@@ -34,8 +34,8 @@ body {
   padding: 0;
   display: flex;
   max-width: 100%;
-  min-height: 100vh;
-  overflow-x: hidden;
+  max-height: 100vh;
+  overflow-x: hidden !important;
 }
 
 h1 {
